inicio tarefa 22 - Jar Jar Binks

--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
 <title>Documento sem título</title>
 </head>
 
+
+
+
+<!-- #######  Tarefa 22 #########-->
+<!-- Sem CSS só pra montar a estrutura-->
+<table style="width: 80%; margin-left: auto; margin-right: auto;" border="1">
+<tbody>
+<tr>
+  <td style="width: 50%;" colspan="4">
+    <img style="display: block; margin-left: auto; margin-right: auto;" src="img/Jar_Jar_aotc.jpg" alt="" width="200" height="291" />
+  </td>
+  <td style="width: 50%;" colspan="4">
+    <strong>22 - Jar Jar Binks</strong> foi um Gungan comandante militar e pol&iacute;tico que desempenhou um papel principal na Invas&atilde;o de Naboo e nas Guerras Cl&ocirc;nicas que culminaram na queda da Rep&uacute;blica Gal&aacute;ctica e na ascens&atilde;o do Imp&eacute;rio Gal&aacute;ctico. Uma vez exclu&iacute;do da sociedade Gungan devido a seu comportamento atrapalhado, ele reganhou a aprova&ccedil;&atilde;o de seu povo ao ajudar a garantir uma alian&ccedil;a entre o chefe Gungan Rugor Nass e a Rainha Padm&eacute; Amidala de Naboo, uma alian&ccedil;a vital para acabar com a invas&atilde;o da Federa&ccedil;&atilde;o de Com&eacute;rcio em seu mundo natal compartilhado. Nos anos que seguiram, Binks tornou-se o Representante J&uacute;nior do seu povo no Senado Gal&aacute;ctico, servindo ao lado de Amidala quando ela se tornou a senadora do planeta.&nbsp;...
+  </td>
+</tr>
+<tr>
+<td style="width: 12.5%;">&nbsp;</td>
+<td style="width: 12.5%;">&nbsp;</td>
+<td style="width: 12.5%;">&nbsp;</td>
+<td style="width: 12.5%;">&nbsp;</td>
+<td style="width: 12.5%;">&nbsp;</td>
+<td style="width: 12.5%;">&nbsp;</td>
+<td style="width: 12.5%;">&nbsp;</td>
+<td style="width: 12.5%;">&nbsp;</td>
+</tr>
+</tbody>
+</table>
+
+
 <body>
 </body>
 </html>
