--- a/index.html
+++ b/index.html
@@ -2,9 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Documento sem título</title>
+<title>StarWars</title>
+<link rel="stylesheet" href="specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
+<link rel="stylesheet" href="css_11/estilo.css"/>
+
 </head>
 
 <body>
+<center>
+	<h1>StarWars</h1>
+</center>
+<h1>Tarefa 11 </h1>
+<center>
+<table width="100%" border="1">
+    <tr>
+      <td colspan="4" width="25%">
+      <b>Foto:</b>
+      	<center>
+        	<img src="img/Yoda.jpg" alt="Yoda" width="200" />
+        </center>
+      </td>
+      <td colspan="4">
+      	
+      </td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+</table>
+</center>
+
+
 </body>
 </html>
