alterado descricao do personagem general hux

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
 							<div class="panel-heading">NOME E DESCRIÇÃO</div>
 							<div class="panel-body">
 								<h3>Armitage Hux</h3>
-								<p>Armitage Hux era um Humano que serviu como General na Primeira Ordem aproximadamente 30 anos depois da Batalha de 
-								Endor. Ele era filho de Brendol Hux, um Comandante chefe da Academia Arkanis cujo a formação de ideias radicais 
-								tornaram-se uma parte da visão da Primeira Ordem. Servindo o Líder Supremo Snoke, 
-								Hux foi um dos membros mais graduados da Primeira Ordem, e o Comandante da super arma conhecida como Starkiller.</p>
+								<p>Esforçando, poderoso e maligno, Darth Sidious restaurou os Sith e destruiu a Ordem Jedi. 
+								Vivendo uma vida dupla, Sidious era de fato Palpatine, um senador de Naboo e ameaça fantasma. Ele lentamente manipulou o sistema político da 
+								República Galáctica até que foi nomeado Chanceler Supremo - e eventualmente Imperador - governando a galáxia através do medo e da tirania.</p>
 							</div>
 						</div>
 					</div>
