ajustes de conflito com outro usuario

--- a/index.html
+++ b/index.html
@@ -385,9 +385,11 @@
 						<div class="panel panel-info">
 							<div class="panel-heading">Afiliações:</div>
 							<div class="panel-body">
-								
+							</div>
+						</div>
+					</div>	
+				</div>	
 
-<<<<<<< HEAD
 <br>
 
 <h1>Tarefa 33 </h1>
