--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 		</div>
 	</div>
 </div>
+
 <h1>Tarefa 11 </h1>
 <center>
 <table width="100%" class="darkTable">
@@ -166,6 +167,7 @@
 
 <h1>Tarefa 27 </h1>
 <center>
+
 <table width="100%" class="darkTable">
     <tr>
       <td colspan="4" width="35%">
@@ -228,6 +230,7 @@
     </tr>
 </table>
 </center>
+</div>
 <div class="row">
 	<div class="col-md-16">
 	<div class="panel panel-info">
@@ -403,7 +406,9 @@
 						<div class="panel panel-info">
 							<div class="panel-heading">FOTO</div>
 							<div class="panel-body">
-								
+								<center>
+									<img src="img/Emperor-Palpatine.jpeg" alt="Emperor Palpatine" width="100%">
+								</center>
 							</div>
 						</div>
 					</div>
@@ -411,7 +416,11 @@
 						<div class="panel panel-info">
 							<div class="panel-heading">NOME E DESCRIÇÃO</div>
 							<div class="panel-body">
-								
+							<h3>Imperador Palpatine / Darth Sidious</h3>
+								<p>Esforçando, poderoso e maligno, Darth Sidious restaurou os Sith e destruiu a Ordem Jedi. 
+								Vivendo uma vida dupla, Sidious era de fato Palpatine, um senador de Naboo e ameaça fantasma. 
+								Ele lentamente manipulou o sistema político da República Galáctica até que foi nomeado Chanceler Supremo - 
+								e eventualmente Imperador - governando a galáxia através do medo e da tirania.</p>	
 							</div>
 						</div>
 					</div>
