--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 						</div>
 					</div>
 					<div class="col-md-2 col-xs-4">
-						<div class="panel panel-info">
+						<div class="panel panel-info
 							<div class="panel-heading">Armas:</div>
 							<div class="panel-body">
 								<p>não possui</p>
@@ -414,8 +414,7 @@
 					</div>
 					<div class="col-md-8">
 						<div class="panel panel-info">
-							<div class="panel-heading">NOME E DESCRIÇÃO</div>
-							<div class="panel-body">
+/usr/bin/bash: :wq: command not found
 							<h3>Imperador Palpatine / Darth Sidious</h3>
 								<p>Esforçando, poderoso e maligno, Darth Sidious restaurou os Sith e destruiu a Ordem Jedi. 
 								Vivendo uma vida dupla, Sidious era de fato Palpatine, um senador de Naboo e ameaça fantasma. 
