--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 							<div class="panel-body">
 							<h3>Imperador Palpatine / Darth Sidious</h3>
 								<p>Esforçando, poderoso e maligno, Darth Sidious restaurou os Sith e destruiu a Ordem Jedi. 
-								Vivendo uma vida dupla, Sidious era de fato Palpatine, um senador de Naboo e ameaça fantasma. eventualmente Imperador - e governando a galáxia através do medo e da tirania.</p>	
+								Vivendo uma vida dupla, Sidious era de fato Palpatine, um senador de Naboo e ameaça fantasma. Eventualmente Imperador e governando a galáxia através do medo e da tirania.</p>	
 							</div>
 						</div>
 					</div>
