--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 							<h3>Imperador Palpatine / Darth Sidious</h3>
 								<p>Esforçando, poderoso e maligno, Darth Sidious restaurou os Sith e destruiu a Ordem Jedi. 
 									Vivendo uma vida dupla, Sidious era de fato Palpatine, um senador de Naboo e ameaça fantasma. 
-									Ele lentamente manipulou o sistema político da República Galáctica até que foi nomeado Chanceler Supremo - 
+									Ele lentamente manipulou o sistema político da República Galáctica até que foi nomeado Chanceler Supremo  
 									e eventualmente Imperador - governando a galáxia através do medo e da tirania.</p>
 							</div>
 						</div>
