--- a/index.html
+++ b/index.html
@@ -114,6 +114,119 @@
 		</div>
 	</div>
 </div>
+
+
+<h1>Tarefa 8 </h1>
+<div class="row">
+	<div class="col-md-16">
+		<div class="panel panel-info">
+			<div class="panel-heading">BB-8</div>
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-md-8">
+						<div class="panel panel-info">
+							<div class="panel-heading">FOTO</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8">
+						<div class="panel panel-info">
+							<div class="panel-heading">NOME E DESCRIÇÃO</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Aparições:</div>
+							<div class="panel-body">
+								Star Wars: Episode VII The Force Awakens, <br>
+								Star Wars: Episode VIII The Last Jedi, <br>
+								Star Wars: Forces of Destiny
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Afiliações:</div>
+							<div class="panel-body">
+								The Resistance
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Locais:</div>
+							<div class="panel-body">
+
+								ND
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Genero:</div>
+							<div class="panel-body">
+
+								MAQUINA
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Dimensões:</div>
+							<div class="panel-body">
+
+								Altura: 0.67m
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Veículos:</div>
+							<div class="panel-body">
+
+								Resistance Transport Pod
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Armas:</div>
+							<div class="panel-body">
+
+								ND
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Ferramentas:</div>
+							<div class="panel-body">
+
+								ND
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</div>
+
 <h1>Tarefa 11 </h1>
 <center>
 <table width="100%" class="darkTable">
