--- a/index.html
+++ b/index.html
@@ -458,6 +458,111 @@
 		</div>
 	</div>
 </div>
+
+<h1>Tarefa 30</h1>
+<div class="row">
+	<div class="col-md-16">
+		<div class="panel panel-info">
+			<div class="panel-heading">DARTH VADER </div>
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-md-8">
+						<div class="panel panel-info">
+							<div class="panel-heading">FOTO</div>
+							<div class="panel-body">
+								<center>
+									<img src="img/darthvader.jpeg" alt="DARTH VADER" width="100%">
+								</center>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8">
+						<div class="panel panel-info">
+							<div class="panel-heading">NOME E DESCRIÇÃO</div>
+							<div class="panel-body">
+								<h3>DARTH VADER</h3>
+								<p>Outrora um heróico Cavaleiro Jedi, Darth Vader foi seduzido pelo lado negro da Força,
+									tornou-se um Lorde Sith e liderou a erradicação da Ordem Jedi pelo Império.
+									Ele permaneceu a serviço do Imperador - o malvado Darth Sidious - por décadas,
+									reforçando a vontade de seu Mestre e buscando esmagar a jovem Aliança Rebelde.
+									Mas ainda havia bom nele
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Aparições:</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Afiliações:</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Locais:</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Genero:</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Dimensões:</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Veículos:</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Armas:</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Ferramentas:</div>
+							<div class="panel-body">
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</div>
+
+
 <div class="row">
 	<div class="col-md-16">
 	<div class="panel panel-info">
@@ -631,6 +736,7 @@
 		</div>
 	</div>
 </div>
+
 
 
 </body>
