--- a/index.html
+++ b/index.html
@@ -269,7 +269,6 @@
 </table>
 </center>
 
-
 <h1>Tarefa 27 </h1>
 <center>
 
@@ -453,6 +452,111 @@
 		</div>
 	</div>
 </div>
+
+<h1>Tarefa 32 </h1>
+<div class="row">
+	<div class="col-md-16">
+	<div class="panel panel-info">
+		<div class="panel-heading">NOME </div>
+			  <div class="panel-body">
+			  	<div class="row">
+					<div class="col-md-8">
+						<div class="panel panel-info">
+							<div class="panel-heading">FOTO</div>
+							<div class="panel-body">
+								<center>
+									<img src="" alt="" width="100%">
+								</center>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8">
+						<div class="panel panel-info">
+							<div class="panel-heading">NOME E DESCRIÇÃO</div>
+							<div class="panel-body">
+								<h3> </h3>
+								<p> </p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Aparições:</div>
+							<div class="panel-body">
+								Star Wars: Episode II Attack of the Clones, <br><br>
+								Star Wars: Episode III Revenge of the Sith, <br><br>
+								Star Wars: The Clone Wars
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Afiliações:</div>
+							<div class="panel-body">
+								Jedi Order, <br><br>
+								Confederacy of Independent Systems, <br><br>
+								Sith
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Locais:</div>
+							<div class="panel-body">
+								Serenno
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Gênero:</div>
+							<div class="panel-body">
+								Masculino
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Dimensões:</div>
+							<div class="panel-body">
+								Altura: 1.93m
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Armas:</div>
+							<div class="panel-body">
+								Lightsaber
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Veículos:</div>
+							<div class="panel-body">
+								Solar Sailer, <br><br>
+								Count Dooku's Speeder
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Ferramenta:</div>
+							<div class="panel-body">
+								The Box
+							</div>
+						</div>
+					</div>
+				</div>
+			  
+			  </div>
+		</div>
+	</div>
+</div>
+
 <div class="row">
 	<div class="col-md-16">
 	<div class="panel panel-info">
