Criado a branch b_tarefa_28 e criado e as informações dos personagens

--- a/index.html
+++ b/index.html
@@ -555,7 +555,111 @@
 	</div>
 </div>
 
-
+<h1>Tarefa 28 </h1>
+<div class="row">
+	<div class="col-md-16">
+	<div class="panel panel-info">
+		<div class="panel-heading">NOME </div>
+			  <div class="panel-body">
+			  	<div class="row">
+					<div class="col-md-8">
+						<div class="panel panel-info">
+							<div class="panel-heading">FOTO</div>
+							<div class="panel-body">
+								<center>
+									<img src="" alt="" width="100%">
+								</center>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8">
+						<div class="panel panel-info">
+							<div class="panel-heading">NOME E DESCRIÇÃO</div>
+							<div class="panel-body">
+								<h3> </h3>
+								<p> </p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Aparições:</div>
+							<div class="panel-body">
+								Star Wars: Episode III Revenge of the Sith <br>
+								Star Wars: The Clone Wars
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Afiliações:</div>
+							<div class="panel-body">
+								Confederacy of Independent Systems
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Locais:</div>
+							<div class="panel-body">
+								-
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Gênero:</div>
+							<div class="panel-body">
+								Masculino
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Dimensões:</div>
+							<div class="panel-body">
+								Altura: 2,16m
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Armas:</div>
+							<div class="panel-body">
+							 Lightsaber<br>
+							 Blaster Rifle<br>
+							 Electropole
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Veículos:</div>
+							<div class="panel-body">
+								Separatist Dreadnought<br>
+								Soulless One<br>
+								General Grievous Speeder<br>
+								General Grievous<br>
+								TSMEU-6 Wheel Bike
+							</div>
+						</div>
+					</div>
+					<div class="col-md-2 col-xs-4">
+						<div class="panel panel-info">
+							<div class="panel-heading">Ferramenta:</div>
+							<div class="panel-body">
+								-
+							</div>
+						</div>
+					</div>
+				</div>
+			  
+			  </div>
+		</div>
+	</div>
+</div>
 
 
 <h1>Tarefa 32 </h1>
